# clearpath_docking

./: CMakeLists.txt  hardware_plugin.xml  package.xml
config/: clearpath_controllers.yaml
include/clearpath_docking/: clearpath_motor.h  clearpath_motor_hw.h  clearpath_robot_hw.h  encoder_value.h  manager.h  motor_hw_base.h  motor_state.h  ras_utils.h  ras_utils.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/clearpath_docking/share/clearpath_docking/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: clearpath.launch.py  clearpath_bringup.launch.py
lib/: clearpath_motor.cpp  clearpath_motor_hw.cpp  clearpath_robot_hw.cpp  manager.cpp  motor_hw_base.cpp
log/: latest_build
msg/: ClearpathState.msg
src/: clearpath_node.cpp  clearpath_robot_node.cpp
urdf/: clearpath_motor.urdf.xacro
